# hcm-ai-sample-app

./: .flaskenv  Dockerfile  Dockerfile.chatbot  README.md  bonfire-config.yaml  cookiecutter.json  deploy_on_ephemeral.sh  pyproject.toml
src/${parameters.projectName}/: __init__.py
src/chatbot/: chatbot.py  chatbot_styles.css
src/hcm-ai-sample-app/: __init__.py  api.py  config.py  llm.py
src/hcm-ai-sample-app/llm/: config.py  llama_stack_client.py  llm_client.py  open_ai_client.py
src/{{cookiecutter.projectName}}/: __init__.py
templates/: service-template.yaml
